language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_unreachable_clauses_with_mix_of_reachable_and_unreachables.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  case x {\n    1 -> todo\n    2 -> todo\n    3 | 3 | 3 | 4 | 3 | 5 -> todo\n  }\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
  case x {
    1 -> todo
    2 -> todo
    3 | 3 | 3 | 4 | 3 | 5 -> todo
        ↑                        
  }
}


----- AFTER ACTION
pub fn main(x) {
  case x {
    1 -> todo
    2 -> todo
    3 | 4 | 5 -> todo
  }
}
