language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_unused_start_of_file.snap
---
source: language-server/src/tests/action.rs
expression: "import option\nimport result\n\npub fn main() {\n  result.is_ok\n}\n"
---
----- BEFORE ACTION
import option
▔▔▔▔▔▔▔▔▔▔▔▔▔
import result
▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  result.is_ok
}


----- AFTER ACTION

pub fn main() {
  result.is_ok
}
