language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_bit_array_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    let assert <<bitValue>> = <<73>>\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert <<bitValue>> = <<73>>
               ▔▔▔▔▔▔▔▔▔▔↑          
}


----- AFTER ACTION
pub fn main() {
    let assert <<bit_value>> = <<73>>
}
