language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_case_variable_discard.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    case 21 { _twentyOne -> {Nil} }\n}"
---
----- BEFORE ACTION
pub fn main() {
    case 21 { _twentyOne -> {Nil} }
         ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑         
}


----- AFTER ACTION
pub fn main() {
    case 21 { _twenty_one -> {Nil} }
}
