language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_const.snap
---
source: language-server/src/tests/action.rs
expression: const myInvalid_Constant = 42
---
----- BEFORE ACTION
const myInvalid_Constant = 42
               ↑             


----- AFTER ACTION
const my_invalid_constant = 42
