language-server/src/tests/snapshots/gleam_language_server__tests__action__rename_invalid_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "type MyType { The_Constructor(Int) }"
---
----- BEFORE ACTION
type MyType { The_Constructor(Int) }
               ↑                    


----- AFTER ACTION
type MyType { TheConstructor(Int) }
